rename eagleScheduler.conf to eagle-scheduler.conf